@@ -1244,6 +1244,7 @@ extern void CommandAccept( char * ),
     CommandShowRollout( char * ),
     CommandShowRolls ( char * ),
     CommandShowScore( char * ),
+    CommandShowScoreSheet( char * ),
     CommandShowBearoff( char * ),
     CommandShowSeed( char * ),
     CommandShowSound( char * ),
