@@ -1,3 +1,7 @@
+Fri Jun 4  18:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
+
+	* gtkgame.c, gnubg.c: Add show scoresheet command (to right click menu)
+
 Wed Jun 2  9:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
 
 	* gtkgame.c, gtkboard.c: Add undo right click menu
